admin configuration testing

--- a/apps/backend/modules/usage_alert_sender/config/generator.yml
+++ b/apps/backend/modules/usage_alert_sender/config/generator.yml
@@ -4,3 +4,9 @@ generator:
     model_class:      UsageAlertSender
     theme:            default
     css:             /sf/sf_admin/css/admin_main.css
+    list:
+            title: 'Low Credit Alert Sender'
+            display: [id, name]
+    edit:
+            title: 'Edit Low Credit Alert Sender'
+            display: [id, name]
