--- a/apps/backend/modules/agent_user/config/generator.yml
+++ b/apps/backend/modules/agent_user/config/generator.yml
@@ -3,8 +3,8 @@ generator:
   param:
     model_class:      AgentUser
     theme:            default
-    css:     /sf/sf_admin/css/admin_main.css
+    css:             /sf/sf_admin/css/admin_main.css
     list:
-      display: [id, username, password, agent_company, status]
+      display: [id, agent_company, username, password, status]
       object_actions:
         _delete: ~
