--- a/apps/backend/modules/usage_alert/config/generator.yml
+++ b/apps/backend/modules/usage_alert/config/generator.yml
@@ -4,21 +4,14 @@ generator:
     model_class:      UsageAlert
     theme:            default
     css:             /sf/sf_admin/css/admin_main.css
-    
-    edit:
-      title: Create/Edit UsageAlert
-      display: [alert_amount, sms_alert_message, sms_active  , email_alert_message, email_active, country, sender_name, status]
-      fields:
-           #   enablecountry: {name: Country}
-             # status: {name: Status}
-             # usagealertsender: {name: name}
     list:
-       title: 'Usage Alert'
-       display: [alert_amount, sms_alert_message, sms_active  , email_alert_message, email_active, enablecountry, sender_name, status]
-       fields:
-              enablecountry: {name: Country}
-             # status: {name: Status}
-              #usagealertsender: {name: name}
-       object_actions:
-         _delete: ~
-         _edit: ~
+            title: 'Low Credit Alert'
+            display: [id, alert_amount_min, alert_amount_max, sms_alert_message, sms_active, email_alert_message, email_active, enable_country, usage_alert_sender, status]
+            fields:
+              enable_country: {name: Country}
+              usage_alert_sender: {name: Sender Name}
+            object_actions:
+              _delete: ~
+              _edit: ~
+    edit:
+            title: 'Edit Low Credit Alert'
