--- a/apps/backend/modules/invoice/config/view.yml
+++ b/apps/backend/modules/invoice/config/view.yml
@@ -9,7 +9,7 @@ default:
     #language:     en
     #robots:       index, follow
 
-  stylesheets:    [ui-lightness/jquery-ui-172, main.css, admin.css, /sf/calendar/skins/aqua/theme.css, /sf/sf_admin/css/main.css]
+  stylesheets:    [ui-lightness/jquery-ui-172, /sf/sf_admin/css/admin_main.css, admin.css, /sf/calendar/skins/aqua/theme.css]
 
   javascripts:    [jquery-1.3.2.min.js, jquery-ui-1.7.2.custom.min.js, timepicker.js, /sf/prototype/js/prototype.js]
 
