--- a/apps/backend/modules/product/config/generator.yml
+++ b/apps/backend/modules/product/config/generator.yml
@@ -4,9 +4,14 @@ generator:
     model_class:      Product
     theme:            default
     css:             /sf/sf_admin/css/admin_main.css
+
+    
+
+
+
     edit:
       title: Create/Edit Product
-      display: [name, price,registration_fee, description, initial_balance , include_in_zerocall, is_in_store, country_id,sms_code, product_order]
+      display: [name, price, description, initial_balance , include_in_zerocall, is_in_store, country_id,sms_code, product_order,product_type_package,product_country_us]
       fields:
               enablecountry: {name: Country}
               include_in_zerocall: {name: Customer Module}
@@ -14,7 +19,7 @@ generator:
               is_reg_share_value_pc: {name: Is Reg. share value %}
               is_extra_payments_share_value_pc: {name: Is extra refill share value %}
     list:
-      display: [name,  price,registration_fee, total_amount, description, initial_balance  , include_in_zerocall, is_in_store, enablecountry, sms_code, product_order]
+      display: [name, price, description, initial_balance  , include_in_zerocall, is_in_store, enablecountry, sms_code, product_order,product_type_package,product_country_us]
       fields:
               enablecountry: {name: Country}
               include_in_zerocall: {name: Customer Module}
