--- a/apps/backend/config/settings.yml
+++ b/apps/backend/config/settings.yml
@@ -96,5 +96,6 @@ all:
 #
 #    # i18n
 #   default_culture:        en        # Default user culture
-    default_culture:        de_DE
+#   default_culture:        de_DE
+    default_culture:        en
     charset:                utf-8
