--- a/apps/b2c/config/view.yml
+++ b/apps/b2c/config/view.yml
@@ -3,7 +3,7 @@ default:
     content-type: text/html
 
   metas:
-    title:         WLS2
+    title:         Zapna
     #description:  symfony project
     #keywords:     symfony, project
     #language:     en
